NE-47, NE-52 Address nagging Samba permissions issues
Took a fairly heavy-handed approach here:
1. Reduced share definitions to a single top-level /mnt/nepi_storage share for easier and consistent permissions across the subdirectories
2. Used "admin users = nepi" to grant root-level permissions to nepi user within the share

--- a/nepi_main_rootfs/config/etc/samba/smb.conf
+++ b/nepi_main_rootfs/config/etc/samba/smb.conf
@@ -263,33 +263,18 @@
 
 # Following customization also requires that you've run "sudo smbpasswd -a nepi"
 # (and equivalent for nepi_user) to set up a Samba password in the smbpasswd database
-[data]
-path = /mnt/nepi_storage/data
+[nepi_storage]
+path = /mnt/nepi_storage
+hide files = /lost+found/
 valid users = nepi nepi_user
 read only = no
+admin users = nepi
 
-[logs]
-path = /mnt/nepi_storage/logs
-valid users = nepi nepi_user
-read only = no
-
-[nepi_full_img]
-path = /mnt/nepi_storage/nepi_full_img
-valid users = nepi
-read only = no
-
-[nepi_full_img_archive]
-path = /mnt/nepi_storage/nepi_full_img_archive
-valid users = nepi nepi_user
-read only = no
-
-[ai_models]
-path = /mnt/nepi_storage/ai_models
-valid users = nepi nepi_user
-read only = no
-
-[automation_scripts]
-path = /mnt/nepi_storage/automation_scripts
-valid users = nepi nepi_user
-read only = no
+# In the event that different permissions are required for different users for
+# certain subdirectories, may need to revert back to the older scheme of per-directory 
+# share definitions:
+#[data]
+#path = /mnt/nepi_storage/data
+#valid users = nepi nepi_user
+#read only = no
 
